--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,15 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
+#mail service
+spring.mail.host = smtp.gmail.com
+spring.mail.username = vitusvictor41@gmail.com
+spring.mail.password = jcxrsncnloqjhmyt
+spring.mail.port = 587
+#spring.mail.smtp.port = 25
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+
 spring.jpa.properties.hibernate.format_sql=true
 
 #Universal path
